Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1174

infinite loop in ws-adressing module

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.4.0, 1.4.1
    • None
    • core/addressing
    • None

    Description

      in the ws-adressing module, file addr_out_handler.c, function axis2_addr_out_handler_add_to_soap_header(), line 717 (vers 1.4.0) :

      for (i = 0; size; i++)
      {
      ...
      }

      I think for (i = 0; i < size; i++) is much better !

      Attachments

        Activity

          People

            milinda Milinda Pathirage
            jubi Julien Billon
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: