Fix for JIRA https://issues.apache.org/jira/browse/AXIS2C-1174. Thanks Julien Billon for finding this.